fix spacing and color attributes

--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -239,6 +239,11 @@ http://ionicframework.com/docs/theming/ */
   }
 }
 
+@media (min-width: 991px) {
+  .list-item {
+    padding: var(--spacer-sm) 0;
+  }
+}
 
 .empty-state {
   max-width: 100%;
